# MinUI

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateMakefiles.bat  test.c
MinUI/: MinUI.c
MinUI/mui/: MinUI.c  MinUI.h  mui.c  mui.h
libs/stb/: stb.c
